fix: add margin-bottom 16px for div spacing in modal

--- a/css/styles.css
+++ b/css/styles.css
@@ -583,7 +583,7 @@ address {
  }
 
  .form-field {
-     margin-bottom: 8px;
+     margin-bottom: 16px;
  }
 
  .form-label {
